<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaPacienteActivity">
    <include layout="@layout/toolbar"></include>

<LinearLayout
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:text="Rut"
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtRut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
</LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/fecha_examen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/area_de_trabajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/Presenta_sintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtSintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/Presenta_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textAlignment="textEnd"
            android:id="@+id/txtTos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <TextView
        android:text="@string/temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <TextView
    android:text="@string/presion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:textAlignment="textEnd"
        android:id="@+id/txtPresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
        </LinearLayout>
</LinearLayout>