<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rut"
            android:layout_weight="2"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">
        </TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtRut"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_weight="2"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">
        </TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtNombre"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">
        </TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/txtApellido"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_examen"
        android:layout_weight="2"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">
    </TextView>
    <TextView
        android:layout_weight="1"
        android:id="@+id/txtFecha"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    </LinearLayout>
    <ImageView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ImageView>
</LinearLayout>